parts for synthesis and descriptions

--- a/distributed-development/txtl-toolbox/Toolbox.ipynb
+++ b/distributed-development/txtl-toolbox/Toolbox.ipynb
@@ -116,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "parts = []\n",
+    "parts_dicts = []\n",
     "\n",
     "for part in regulatory + cds + reporters:\n",
     "    if part.features[0].type.upper() == 'CDS':\n",
     "        part_fragment = bsaI_forward + moclo['i1'] + part + moclo['i2'] + bsaI_forward.reverse_complement()\n",
-    "        part_fragment\n",
     "    elif part.name[0] == 'P': # promoter\n",
     "        part_fragment = bsaI_forward + moclo['X'] + part + moclo['i0'] + bsaI_forward.reverse_complement()\n",
     "    elif part.name[0] == 'T': # terminator\n",
@@ -136,12 +136,22 @@
     "    part_fragment.id = part.id\n",
     "    part_fragment.name = part.name\n",
     "    part_fragment.description = \"MoClo assembly fragment for part {}\".format(part.name)\n",
-    "    parts.append(part_fragment)"
+    "    parts.append(part_fragment)\n",
+    "    parts_dicts.append({'name': part.name, 'seq': str(part.seq), 'seq_plus_moclo': str(part_fragment.seq)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(parts_dicts).to_csv('parts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +160,7 @@
        "60"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,13 +168,6 @@
    "source": [
     "SeqIO.write(parts, \"parts.gb\", \"genbank\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
